# rag-workshop

./: .env.example  .gitignore  RAG_Masterclass_Presentation.pptx  README.md  app.py  environment.yml  gemini-prompt.md  pyproject.toml
data/: courses.json  scraper_template.py
data/syllabi/: CS101.md  CS201.md  CS301.md  CS401.md  CS501.md  MATH101.md  MATH201.md  STAT101.md
notebooks/: 01_fundamentals.ipynb  02_rag_pipeline.ipynb  03_agentic_rag.ipynb
src/: __init__.py  agent.py  index_data.py  rag_chain.py
